Closed Bug 467580 Opened 16 years ago Closed 16 years ago

if plugin rect is small enough, default plugin border can be broken by image

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
If a plugin rect is small enough and the default plugin loads, the image of a broken plugin can break the drawn border for the plugin. This is because the image draws after the border. We should swap the drawing order.
Attachment #350994 - Flags: superreview?(jst)
Attachment #350994 - Flags: superreview?(jst) → superreview+
Attachment #350994 - Flags: approval1.9.1?
landed on trunk (1.9.2)
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 350994 [details] [diff] [review]
fix v1.0

a191=beltzner
Attachment #350994 - Flags: approval1.9.1? → approval1.9.1+
pushed to mozilla-1.9.1

http://hg.mozilla.org/releases/mozilla-1.9.1/rev/c70c74f48326
Keywords: fixed1.9.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: