fix a drawing order glitch in the mac default plugin. b=467580 sr=jst